--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantum Gaming</title>
+    <title>Quantom Gaming</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Quantum Gaming</h1>
+        <h1>Quantom Gaming</h1>
         <input type="text" id="search" placeholder="Search games...">
     </header>
 
